<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main_screen" />
        <item
            android:id="@+id/nav_artist_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/artist_profile" />
        <item
            android:id="@+id/nav_special_goods"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/special_and_goods" />
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/community" />
        <item
            android:id="@+id/nav_multimedia"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/multimedia" />
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/player" />
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/live" />
    </group>

</menu>
